# ad-art

./: .gitignore  README.md  pyproject.toml
scripts/: generate_mosaic.py  preview_quadtree.py  probe_referer.py
src/ad_art/: matcher.py  pipeline.py  quadtree.py  rakuten.py  renderer.py
tests/: test_matcher.py  test_pipeline.py  test_quadtree.py  test_rakuten.py  test_renderer.py
