[project]
name = "ad-art"
version = "0.1.0"
description = "Mosaic art generator using ad images as tiles (quadtree-based)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pillow>=12.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ad_art"]

[tool.pytest.ini_options]
testpaths = ["tests"]
